# Full-Stack-Todo-using-fastapi-and-Nextjs

./: README.md
fastapi-neon/: pyproject.toml
fastapi-neon/fastapi_neon/: auth.py  main.py  models.py
fastapi-neon/tests/: test_main.py
todo_ui/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
todo_ui/src/app/: layout.tsx  page.tsx
todo_ui/src/components/: SignIn.tsx  SignUp.tsx  TodoList.tsx
